// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemContainer /> education item education item 1`] = `
.c3 ul {
  list-style-type: disc;
  list-style-position: inside;
  text-indent: -21px;
  padding-left: 21px;
}

.c1 {
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.25rem;
}

.c0 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c0:nth-of-type(1) {
  margin-top: 0.5rem;
}

.c2 {
  font-style: italic;
}

<div
  class="c0"
  data-testid="sectionItemContainer"
>
  <h1
    class="c1"
    data-testid="itemTitle"
  >
    Bachelor of Software Development
  </h1>
  <div
    class="c2"
    data-testid="byline"
  >
    <span
      data-testid="itemSubtitle"
    >
      University
    </span>
     | 
    <span
      data-testid="sectionItemDates"
    >
      2011
       - 
      2013
    </span>
  </div>
  <div
    class="c3"
    data-testid="sectionItemDetails"
  >
    <ul>
      

      <li>
        DB1101 - Basic SQL
      </li>
      

    </ul>
  </div>
</div>
`;

exports[`<ItemContainer /> education item no courses? get nothing 1`] = `
.c1 {
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.25rem;
}

.c0 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c0:nth-of-type(1) {
  margin-top: 0.5rem;
}

.c2 {
  font-style: italic;
}

<div
  class="c0"
  data-testid="sectionItemContainer"
>
  <h1
    class="c1"
    data-testid="itemTitle"
  >
    Bachelor of Software Development
  </h1>
  <div
    class="c2"
    data-testid="byline"
  >
    <span
      data-testid="itemSubtitle"
    >
      University
    </span>
     | 
    <span
      data-testid="sectionItemDates"
    >
      2011
       - 
      2013
    </span>
  </div>
</div>
`;

exports[`<ItemContainer /> experience item experience item 1`] = `
.c3 ul {
  list-style-type: disc;
  list-style-position: inside;
  text-indent: -21px;
  padding-left: 21px;
}

.c1 {
  font-weight: 700;
  font-size: 1.25rem;
  line-height: 1.25rem;
}

.c0 {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.c0:nth-of-type(1) {
  margin-top: 0.5rem;
}

.c2 {
  font-style: italic;
}

<div
  class="c0"
  data-testid="sectionItemContainer"
>
  <h1
    class="c1"
    data-testid="itemTitle"
  >
    President
  </h1>
  <div
    class="c2"
    data-testid="byline"
  >
    <span
      data-testid="itemSubtitle"
    >
      Company
    </span>
     | 
    <span
      data-testid="sectionItemDates"
    >
      2013
       - 
      2014
    </span>
  </div>
  <div
    class="c3"
    data-testid="sectionItemDetails"
  >
    <p>
      Description...
    </p>
  </div>
</div>
`;
